--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/vite": "^4.1.1",
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.5.3",
         "vite": "^6.2.4"
     },
     "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
     "dependencies": {
         "@vitejs/plugin-vue": "^5.2.3",
+        "tailwindcss": "^4.1.2",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0"
     }
