--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "vite": "^6.2.4"
+        "vite": "^6.2.4",
+        "vite-plugin-vue-devtools": "^7.7.6"
     },
-    "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
     "dependencies": {
         "@vitejs/plugin-vue": "^5.2.3",
         "tailwindcss": "^4.1.2",
